<resources>
    <string name="app_name">Innovation Mobile Center</string>
    <string name="bappeda">Bappedalitbang\nKabupaten Bogor</string>

    <!--Component Bottom Navigation Bar-->
    <string name="Dashboard_nav">Dashboard</string>
    <string name="Search_nav">Pencarian</string>
    <string name="About_nav">Tentang</string>

    <!--Dashboard Menu-->
    <string name="Inovasi_mn">Inovasi</string>
    <string name="Inovator_mn">Inovator</string>
    <string name="Peta_mn">Peta</string>
    <string name="Pendaftaran_mn">Pendaftaran</string>
    <string name="latest_in">Terbaru</string>

    <!--Strings that used-->
    <string name="greet_pagi">Halo,\nSelamat Pagi !</string>
    <string name="greet_siang">Halo,\nSelamat Siang !</string>
    <string name="greet_sore">Halo,\nSelamat Sore !</string>
    <string name="greet_malam">Halo,\nSelamat Malam !</string>

    <string name="dt_inovasi">Detail Inovasi</string>
    <string name="dt_inovator">Detail Inovator</string>
    <string name="dt_instansi">Detail Instansi</string>

    <string name="info_instansi">Basic Info Instansi</string>
    <string name="nm_instansi">Nama Instansi</string>
    <string name="em_instansi">Email Instansi</string>
    <string name="al_instansi">Alamat Instansi</string>
    <string name="kec_instansi">Kecamatan Instansi</string>
    <string name="des_instansi">Desa Instansi</string>

    <string name="info">Basic Info Inovator</string>
    <string name="ttl">Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="alamat">Alamat</string>
    <string name="in">List Inovasi yang dibuat</string>
    <string name="kt">Kategori Inovator</string>
    <string name="asl">Asal Instansi</string>

    <string name="profil_tl">Profil</string>
    <string name="tugas_tl">Tugas Pokok dan Fungsi</string>
    <string name="unsur_tl">Visi dan Misi</string>
    <string name="strategi_tl">Strategi</string>
    <string name="kontak_tl">Kontak Kami</string>

    <string name="tahun_inovasi">Tahun dibuat: %1$s</string>

    <string name="fixed_profile_desc">Bappedalitbang Kabupaten Bogor merupakan salah satu lembagateknis daerah di lingkungan Pemerintah</string>
    <string name="profil_desc">Kabupaten Bogor yang dibentuk berdasarkan Peraturan Bupati (PerBup) Kabupaten Bogor Nomor 69 Tahun 2017 tentang Kedudukan, Susunan Organisasi, Tugas dan Fungsi Badan Perencanaan Pembangunan, Penelitian dan Pengembangan Daerah.</string>
    <string name="fixed_tugas_desc">Penyusunan, pelaksanaan, pemantauan, hingga pelaksanaan, dalam ruang lingkup kebijakan teknis di</string>
    <string name="tugas_desc">bidang perencanaan, penelitian, dan pengembangan daerah.</string>
    <string name="fixed_visi_desc">Perumusan dan Pemberian dukungan di bidang kesatuan bangsa dan politik, lalu pembinaan serta</string>
    <string name="visi_desc">pelaksanaan tugas untuk kesatuan bangsa dan politik sesuai tugas yang diberikan Bupati.</string>
    <string name="visi2_desc">Mewujudkan Kabupaten Bogor Maju, Nyaman, Bekeadaban, dan meningkatkan pengembangan budaya dan Pendidikan politik.</string>
    <string name="fixed_strategi_desc">1). Menjalin kerja sama dengan instansi\n2). Meningkatkan intensitas social pada industry 4.0</string>
    <string name="strategi_desc">3). Mengajukan rancangan pembangungan daerah\n4). Optimalisasi anggaran dalam pencapaian visi misi kepala daerah</string>
    <string name="fixed_kontak_desc">Jalan Segar III Kav 2 Komplek Perkantoran Pemda Bogor, Cibinong – Bogor, Jawa Barat 16914, Indonesia</string>
    <string name="kontak_desc">Telepon: (021)87906240\nFax: 87906242\nEmail: bappedalitbang@bogorkab.go.id</string>

    <string name="empty_search">Hasil Pencarian Masih Kosong</string>
    <string name="det_empty_search">Whoops… hasil pencarian masih belum bisa ditampilkan</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tellus nisi, porta a ex sit amet, vehicula hendrerit nibh.</string>

    <string name="daftar_text">Kamu juga bisa mendaftarkan diri menjadi Inovator dan daftarkan Inovasi mu juga loh !</string>

    <string name="no_connection">Koneksi Internet Tidak Terdeteksi</string>
    <string name="det_no_connection">Whoops… koneksi internet anda tidak terdeteksi. Periksa koneksi internet anda dan coba lagi</string>
    <string name="coba_lagi">Coba lagi</string>

    <string name="anggota_text">Anggota</string>
    <string name="inv_terkait">Inovasi Terkait</string>
    <string name="asl_instansi">Asal Instansi</string>

    <string name="invalid">Data yang dituju tidak dapat diraih</string>


    <string name="btn_text_inovator_search">Cari Inovator</string>
    <string name="text_list_inovator">List Inovator</string>
    <string name="btn_text_inovasi_search">Cari Inovasi</string>
    <string name="text_list_inovasi">List Inovasi</string>

    <string name="semua_kategori">Seluruh Kategori</string>
    <string name="kategori">Kategori</string>

    <string name="seluruh_bidang">Seluruh Bidang</string>
    <string name="bidang">Bidang</string>

    <string name="title_deskripsi">Deskripsi</string>
    <string name="dummy_deskripsi">Minuman buah pala mengandung gizi buah pala yang terkandung di dalamnya, energi, protein lemak, karbohidrat,kalsium, fosfor, zat besi dan vitamin A selain itu kulit buah pala juga mengandung minyak atsiri dan zat samak</string>
    <string name="title_manfaat">Manfaat</string>
    <string name="dummy_manfaat">Teh pala ini untuk menambah pendapatan petani pala</string>

    <string name="panduan">Panduan</string>
    <string name="daftar">Daftar</string>
    <string name="detail">Detail</string>

    <string name="invs_det">Sebuah ide atau gagasan baru oleh seseorang atau kelompok yang diaplikasikan atau pun diadopsi dengan ketentuan tertentu</string>
    <string name="inv_det">Seseorang atau kelompok yang memperkenalkan ide/gagasan baru yang diaplikasikan atau pun diadopsi dengan ketentuan tertentu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_list_inovator">ListInovatorActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>