<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <View
            android:id="@+id/header_searchbg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/header_bg"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.07" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.92" />

        <com.google.android.material.tabs.TabLayout
            android:background="@color/background"
            android:id="@+id/tabHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/header_searchbg"
            app:layout_constraintVertical_bias="0.010"
            app:tabTextAppearance="@style/tab_text"
            tools:layout_editor_absoluteX="0dp">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/bulb_icon"
                android:text="@string/Inovasi_mn" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_baseline_group_24"
                android:text="@string/Inovator_mn" />

        </com.google.android.material.tabs.TabLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_lay"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_70sdp"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toBottomOf="@id/tabHeader">

            <com.google.android.material.textfield.TextInputEditText
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Search_nav"
                android:fontFamily="@font/montserrat_medium"
                android:id="@+id/searchInput"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_search"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/header_bg"
            android:clickable="true"
            android:focusable="true"
            app:borderWidth="0dp"
            app:fabCustomSize="@dimen/_35sdp"
            app:layout_constraintStart_toEndOf="@id/search_lay"
            app:layout_constraintTop_toBottomOf="@id/tabHeader"
            app:maxImageSize="@dimen/_20sdp"
            app:shapeAppearanceOverlay="@style/shapeIcon"
            app:srcCompat="@drawable/ic_baseline_youtube_searched_for_24"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/temp_bg_search"
            android:layout_width="287dp"
            android:layout_height="259dp"
            android:src="@drawable/search_bg"
            app:layout_constraintBottom_toTopOf="@id/guideline5"
            app:layout_constraintEnd_toStartOf="@id/guideline4"
            app:layout_constraintHorizontal_bias="0.417"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/tabHeader"
            app:layout_constraintVertical_bias="0.534" />

        <TextView
            android:id="@+id/text_empty_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/monstserrat_semibold"
            android:text="@string/empty_search"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toTopOf="@id/guideline5"
            app:layout_constraintEnd_toEndOf="@id/temp_bg_search"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="@id/temp_bg_search"
            app:layout_constraintTop_toBottomOf="@id/temp_bg_search"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="304dp"
            android:layout_height="60dp"
            android:fontFamily="@font/monstserrat_semibold"
            android:text="@string/det_empty_search"
            android:textAlignment="center"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintBottom_toTopOf="@id/guideline5"
            app:layout_constraintEnd_toEndOf="@id/text_empty_search"
            app:layout_constraintHorizontal_bias="0.387"
            app:layout_constraintStart_toStartOf="@id/text_empty_search"
            app:layout_constraintTop_toBottomOf="@id/text_empty_search"
            app:layout_constraintVertical_bias="0.064" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>